--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,9 +31,10 @@ p {
   }
   .nav-item {
     margin: 0px 15px;
+    border-bottom: 3px solid #92CCCD;
   }
   
-  .dropdown-item:focus, .dropdown-item:hover {
+  .nav-item:focus, .nav-item:hover {
       color: #16181b;
       text-decoration: none;
       background: black;
@@ -48,6 +49,9 @@ p {
     background-color: #92CCCD;
     border: none !important;
     font-family: Helvetica, sans-serif;
+  }
+  .button {
+    border: none;
   }
 
 /* Jumbotron  */
